[package]
name = "okx_connector"
version = "0.1.0"
edition = "2021"

[lib]
name = "okx_connector"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
reqwest = { version = "0.12.5", features = ["json"] }
futures-util = "0.3"
thiserror = "1.0"
url = "2.2"
chrono = "0.4"

[dev-dependencies]
wiremock = "0.6.0"
